Fix login wrapping on small viewport.

--- a/src/app/shared/pages/home/styles.less
+++ b/src/app/shared/pages/home/styles.less
@@ -35,6 +35,7 @@
       color: @white;
       padding: 16px 32px;
       text-transform: uppercase;
+      white-space: nowrap;
     }
   }
 }
